fix: responsiveness and some pixels overflowing on login button

--- a/src/assets/nav.css
+++ b/src/assets/nav.css
@@ -17,10 +17,11 @@
 }
 
 .DropdownMenuContent {
-    min-width: 160px;
+    max-width: 180px;
+    width: 200px;
     background-color: white;
     border-radius: 6px;
-    padding: 10px;
+    padding: 5px;
     box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);;
     animation-name: slide;
     animation-duration: 400ms;
